styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::before,
*::after {
	box-sizing: border-box;
}

body {
	color: #333;
	font-family: 'Roboto', sans-serif;
	padding: 0;
	margin: 0;
	overflow-y: scroll;
}

